--- a/code4us/templates/partials/_categories.html
+++ b/code4us/templates/partials/_categories.html
@@ -1,6 +1,7 @@
+{% load static %}
 <div class="list-group">
     {% for kategori in kategoriler %}
-    <a href="#" class="list-group-item list-group-item-action active">
+    <a href="{% url 'category_books' kategori.id %}" class="list-group-item list-group-item-action active">
         {{ kategori.name }}                 
     </a>
     {% endfor %}  
