--- a/code4us/templates/details.html
+++ b/code4us/templates/details.html
@@ -1,28 +1,28 @@
-{% load static %}
+{% load static %} <!-- Django'da statik dosyalarını yüklemek için kullanılır -->
 
 <!DOCTYPE html>
 <html lang="en">
 <head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css">
-    <title>Code4us</title>
+    <meta charset="UTF-8"> <!-- Sayfanın karakter kodlamasını UTF-8 olarak belirler. -->
+    <meta name="viewport" content="width=device-width, initial-scale=1.0"> <!-- Sayfanın mobil cihazlarda düzgün görüntülenmesi için viewport ayarlarını yapar. -->
+    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css">  <!-- Bootstrap 5.3.3 stil dosyasını yükler. -->
+    <title>Code4us</title>  <!-- Tarayıcı sekmesinde görünen sayfa başlığı. -->
 </head>
 <body>
-    {% include 'partials/_navbar.html' %}
+    {% include 'partials/_navbar.html' %} <!-- Navbar'ı (üst menüyü) içeren parçayı dahil eder. -->
 
     <div class="container mt-3">
         <div class="row">
             <div class="col-12">
                 <div class="card mb-3">
-                    <div class="row g-0">
-                      <div class="col-md-4">
-                        <img src="{% static 'img/'|add:book.gorsel %}" class="img-fluid rounded-start" alt="...">
+                    <div class="row g-0"> 
+                      <div class="col-md-4"><!-- Kitap görseli -->
+                        <img src="{% static 'img/'|add:book.gorsel %}" class="img-fluid rounded-start" alt="..."> <!-- Kitap görselini dinamik olarak yükler. 'book.gorsel' dosya adını belirtir. -->
                       </div>
                       <div class="col-md-8">
                         <div class="card-body">
-                          <h5 class="card-title">{{ book.kitap_adi }}</h5>
-                          <p class="card-text">{{ book.aciklama }}</p>
+                          <h5 class="card-title">{{ book.kitap_adi }}</h5> <!-- Kitap başlığını gösterir. -->
+                          <p class="card-text">{{ book.aciklama }}</p>  <!-- Kitap açıklamasını gösterir. -->
                         </div>
                       </div>
                     </div>
